--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="menu/brownies.html">Brownies</a></li>
-                                <li><a class="dropdown-item" href="menu/shakes.html">Shakes</a></li>
+                                <li><a class="dropdown-item" href="#">Brownies</a></li>
+                                <li><a class="dropdown-item" href="#">Shakes</a></li>
                                 <li><a class="dropdown-item" href="/menu.html">All Items</a></li>
 
                             </ul>
@@ -108,7 +108,7 @@
 
             </div>
     </main>
-    <footer>
+    <footer class="footer mb-0 p-0">
         <div class="bg-success px-5 py-3">
             <div class="d-flex justify-content-between">
                 <div>
