--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="menu/brownies.html">Brownies</a></li>
-                                <li><a class="dropdown-item" href="menu/shakes.html">Shakes</a></li>
+                                <li><a class="dropdown-item" href="#">Brownies</a></li>
+                                <li><a class="dropdown-item" href="#">Shakes</a></li>
                                 <li><a class="dropdown-item" href="/menu.html">All Items</a></li>
 
                             </ul>
@@ -63,7 +63,7 @@
                 <h1 class="fs-3 fw-bolder">Contact Us </h1>
             </div>
         </div>
-        <div class="container my-5">
+        <div class="container my-5 w-50">
             <form>
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
@@ -81,7 +81,7 @@
             </form>
         </div>
     </main>
-    <footer>
+    <footer class="footer mb-0 p-0">
         <div class="bg-success px-5 py-3">
             <div class="d-flex justify-content-between">
                 <div>
