--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="menu/brownies.html">Brownies</a></li>
-                                <li><a class="dropdown-item" href="menu/shakes.html">Shakes</a></li>
+                                <li><a class="dropdown-item" href="#">Brownies</a></li>
+                                <li><a class="dropdown-item" href="#">Shakes</a></li>
                                 <li><a class="dropdown-item" href="/menu.html">All Items</a></li>
 
                             </ul>
