--- a/menu.html
+++ b/menu.html
@@ -36,8 +36,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="menu/brownies.html">Brownies</a></li>
-                                <li><a class="dropdown-item" href="menu/shakes.html">Shakes</a></li>
+                                <li><a class="dropdown-item" href="#">Brownies</a></li>
+                                <li><a class="dropdown-item" href="#">Shakes</a></li>
                                 <li><a class="dropdown-item" href="/menu.html">All Items</a></li>
 
                             </ul>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="card-body text-center">
                         <h6 class="text-base text-muted mb-3">Complement your pizza, burger and sandwich with wide range of sides & beverages available at BITE & BREW.</h6>
-                        <a href="menu/shakes.html" class="btn btn-outline-success text-uppercase">View all</a>
+                        <a href="#" class="btn btn-outline-success text-uppercase">View all</a>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="card-body text-center">
                         <h6 class="text-base text-muted mb-3">Experience chocolate heaven with our irresistible brownies – a treat you can't resist!</h6>
-                        <a href="menu/brownies.html" class="btn btn-outline-success text-uppercase">View all</a>
+                        <a href="#" class="btn btn-outline-success text-uppercase">View all</a>
                     </div>
                 </div>
             </div>
