--- a/menu/burger.html
+++ b/menu/burger.html
@@ -36,8 +36,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="brownies.html">Brownies</a></li>
-                                <li><a class="dropdown-item" href="shakes.html">Shakes</a></li>
+                                <li><a class="dropdown-item" href="#">Brownies</a></li>
+                                <li><a class="dropdown-item" href="#">Shakes</a></li>
                                 <li><a class="dropdown-item" href="/menu.html">All Items</a></li>
 
                             </ul>
@@ -71,17 +71,18 @@
               <li class="breadcrumb-item active" aria-current="page">Burger</li>
             </ol>
           </nav>
-          <div class="d-flex align-items-center flex-column mb-5">
+          <div class="d-flex align-items-center flex-column mb-5 p-2">
             <div class="card mb-3" style="max-width: 850px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img alt="Burger"
+                    src="https://images.unsplash.com/photo-1621800043295-a73fe2f76e2c?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid rounded-start">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      <h5 class="card-title">Aloo Tikki Burger</h5>
+                      <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed est tempora molestiae porro placeat possimus.</p>
+                      <p class="card-text">Large - Rs. 89/-   Small - Rs. 59/-</p>
                     </div>
                   </div>
                 </div>
@@ -89,13 +90,14 @@
               <div class="card mb-3" style="max-width: 850px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img alt="Burger"
+                    src="https://images.unsplash.com/photo-1621800043295-a73fe2f76e2c?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid rounded-start">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      <h5 class="card-title">Aloo Tikki Burger</h5>
+                      <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed est tempora molestiae porro placeat possimus.</p>
+                      <p class="card-text">Large - Rs. 89/-   Small - Rs. 59/-</p>
                     </div>
                   </div>
                 </div>
@@ -103,41 +105,14 @@
               <div class="card mb-3" style="max-width: 850px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img alt="Burger"
+                    src="https://images.unsplash.com/photo-1621800043295-a73fe2f76e2c?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid rounded-start">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card mb-3" style="max-width: 850px;">
-                <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card mb-3" style="max-width: 850px;">
-                <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      <h5 class="card-title">Aloo Tikki Burger</h5>
+                      <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed est tempora molestiae porro placeat possimus.</p>
+                      <p class="card-text">Large - Rs. 89/-   Small - Rs. 59/-</p>
                     </div>
                   </div>
                 </div>
